# evmjit

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  circle.yml
cmake/: ProjectLLVM.cmake  llvm.cmake
debian/: changelog  control  copyright  rules
include/: evm.h  evmjit.h
include/evmjit/: JIT-c.h  JIT.h
libevmjit/: Arith256.cpp  Arith256.h  Array.cpp  Array.h  BasicBlock.cpp  BasicBlock.h  CMakeLists.txt  Cache.cpp  Cache.h  Common.h  Compiler.cpp  Compiler.h  CompilerHelper.cpp  CompilerHelper.h  Endianness.cpp  Endianness.h  ExecStats.cpp  ExecStats.h  Ext.cpp  Ext.h  GasMeter.cpp  GasMeter.h  Instruction.cpp  Instruction.h  JIT.cpp  JIT.h  Memory.cpp  Memory.h  Optimizer.cpp  Optimizer.h  Runtime.h  RuntimeManager.cpp  RuntimeManager.h  Type.cpp  Type.h  Utils.cpp  Utils.h  evmjit.cpp
libevmjit/preprocessor/: llvm_includes_start.h
libevmjit/support/: Path.cpp  Path.h
scripts/: build.sh
tests/: CMakeLists.txt  test-evm.cpp  test-evmjit-standalone.c
